--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-bower-concat": "^0.6.0"
+    "grunt-bower-concat": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-uglify": "^0.11.0"
   }
 }
