--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "leaflet": "~0.7.7",
-    "turf": "~2.0.2"
+    "turf": "~2.0.2",
+    "typeahead.js": "~0.11.1"
   }
 }
