--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,11 @@
 machine:
   node:
     version: 0.10.33
+
+test:
+  override:
+  - echo true
+
 deployment:
   production:
     branch: feature/circleci
